<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsaisi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btsaisi"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_saisie_texte"
        android:layout_marginStart="20dp"
        android:onClick="saisie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsaisidate"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/textesaisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/act_saisie_texte"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btsaisidate"
        app:layout_constraintStart_toEndOf="@id/btsaisi"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btsaisidate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/saisie_date"
        android:onClick="saisieDate"
        app:layout_constraintTop_toBottomOf="@id/btsaisi"
        app:layout_constraintBottom_toTopOf="@id/btUtilisateur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btUtilisateur"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_utilisateur"
        android:onClick="utilisateur"
        app:layout_constraintTop_toBottomOf="@id/btsaisidate"
        app:layout_constraintBottom_toTopOf="@id/btBatterie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btBatterie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_batterie"
        android:onClick="batterie"
        app:layout_constraintTop_toBottomOf="@id/btUtilisateur"
        app:layout_constraintBottom_toTopOf="@id/btJSon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btJSon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_json"
        android:onClick="jsonHttp"
        app:layout_constraintTop_toBottomOf="@id/btBatterie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>