<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/detail_util_nom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/couleurNom"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detail_util_prenom"
        />
    <TextView
        android:id="@+id/detail_util_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_util_nom"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/detail_util_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telephone"
        android:textStyle="italic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_util_nom"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>