<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LectureFtpJSon">

    <EditText
        android:id="@+id/json_edittext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@id/json_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/json_btn_lec_ftp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec_ftp"
        android:onClick="lectFtp"
        app:layout_constraintEnd_toStartOf="@id/json_btn_lec_json"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/json_guideline"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/json_btn_lec_json"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec_json"
        android:onClick="lecJson"
        app:layout_constraintEnd_toStartOf="@id/json_btn_retour"
        app:layout_constraintStart_toEndOf="@id/json_btn_lec_ftp"
        app:layout_constraintTop_toBottomOf="@id/json_guideline"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/json_btn_retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour"
        android:onClick="retour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/json_btn_lec_json"
        app:layout_constraintTop_toBottomOf="@id/json_guideline"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/json_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="65dp" />

</androidx.constraintlayout.widget.ConstraintLayout>