<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReseauActivity">


    <TextView
        android:id="@+id/info_reseau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_reseau"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/info_reseau_texte_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/info_reseau_texte_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_reseau"
        app:layout_constraintTop_toTopOf="@id/texte_group"
        app:layout_constraintBottom_toTopOf="@id/info_res_ret"
        app:layout_constraintStart_toStartOf="@id/texte_group"
        />

    <TextView
        android:id="@+id/info_reseau_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="********"
        app:layout_constraintTop_toTopOf="@id/info_group"
        app:layout_constraintBottom_toTopOf="@id/info_res_ret"
        app:layout_constraintStart_toStartOf="@id/info_group"
        />

    <Button
        android:id="@+id/info_res_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:onClick="test"
        app:layout_constraintTop_toBottomOf="@id/info_reseau_type"
        app:layout_constraintBottom_toTopOf="@id/info_res_ret"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/info_res_ret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_retour"
        android:onClick="retour"
        app:layout_constraintTop_toBottomOf="@id/info_res_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/texte_group"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        app:constraint_referenced_ids="info_reseau_texte_type"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/info_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        app:constraint_referenced_ids="info_reseau_type"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/texte_group"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>